# vsandbox

./: .gitignore  README.md  idea.md  pyproject.toml
docs/: claude_code_terminal_bench_trace_report.md  deferred_readiness_trace_report.md  future_deferred_readiness_whatif_report.md  mini_swe_agent_minimax_trace_report.md  remote_agent_ttft_design_note.md  speculative_readiness_report.md  terminus2_terminal_bench_trace_report.md
tests/: test_replay.py  test_runtime.py  test_whatif.py
vsandbox/: __init__.py  barrier.py  cli.py  graph.py  replay.py  runtime.py  whatif.py
